fix wrap bug

--- a/client/src/components/personalArea/personalArea.css
+++ b/client/src/components/personalArea/personalArea.css
@@ -1,6 +1,7 @@
 .personal-container{
     direction: rtl;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     margin-top: 2rem;
 }
